// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`candidates reducer should match GET_CANDIDATES_RES snapshot 1`] = `
Object {
  "current": Object {},
  "data": Array [
    Object {
      "birthdate": null,
      "candidate_vacancies": Array [
        Object {
          "candidate_id": 1,
          "created_at": "2017-08-11T18:21:18.446Z",
          "current_vacancy_stage_id": 16,
          "id": 1,
          "updated_at": "2017-08-11T18:21:18.446Z",
          "vacancy_id": 43,
        },
        Object {
          "candidate_id": 1,
          "created_at": "2017-08-14T14:13:47.194Z",
          "current_vacancy_stage_id": 56,
          "id": 5,
          "updated_at": "2017-08-17T11:24:27.863Z",
          "vacancy_id": 48,
        },
      ],
      "created_at": "2017-08-10T08:45:27.030Z",
      "first_name": "Откорней",
      "id": 1,
      "last_name": "Докончиков",
      "middle_name": "Муфлонович",
      "updated_at": "2017-08-10T08:45:27.030Z",
      "vacancy_id": null,
    },
    Object {
      "birthdate": "1989-02-28",
      "candidate_vacancies": Array [],
      "created_at": "2017-08-10T09:38:52.457Z",
      "first_name": null,
      "id": 2,
      "last_name": null,
      "middle_name": null,
      "updated_at": "2017-08-10T09:38:52.457Z",
      "vacancy_id": null,
    },
    Object {
      "birthdate": "1994-11-17",
      "candidate_vacancies": Array [
        Object {
          "candidate_id": 3,
          "created_at": "2017-08-11T19:04:17.983Z",
          "current_vacancy_stage_id": 16,
          "id": 3,
          "updated_at": "2017-08-11T19:04:17.983Z",
          "vacancy_id": 43,
        },
        Object {
          "candidate_id": 3,
          "created_at": "2017-08-14T14:14:30.730Z",
          "current_vacancy_stage_id": 63,
          "id": 6,
          "updated_at": "2017-08-17T10:11:30.822Z",
          "vacancy_id": 50,
        },
      ],
      "created_at": "2017-08-10T09:54:52.718Z",
      "first_name": "Виктория",
      "id": 3,
      "last_name": "Сабурова",
      "middle_name": "Игоревна",
      "updated_at": "2017-08-10T09:54:52.718Z",
      "vacancy_id": null,
    },
  ],
  "openLinkedCandidateModal": false,
  "sources": Array [],
}
`;

exports[`candidates reducer should match GET_CURRENT_CANDIDATE_RES snapshot 1`] = `
Object {
  "current": Object {
    "birthdate": "1994-11-17",
    "candidate_vacancies": Array [
      Object {
        "candidate_id": 3,
        "created_at": "2017-08-11T19:04:17.983Z",
        "current_vacancy_stage_id": 16,
        "id": 3,
        "updated_at": "2017-08-11T19:04:17.983Z",
        "vacancy_id": 43,
      },
      Object {
        "candidate_id": 3,
        "created_at": "2017-08-14T14:14:30.730Z",
        "current_vacancy_stage_id": 63,
        "id": 6,
        "updated_at": "2017-08-17T10:11:30.822Z",
        "vacancy_id": 50,
      },
    ],
    "created_at": "2017-08-10T09:54:52.718Z",
    "first_name": "Виктория",
    "id": 3,
    "last_name": "Сабурова",
    "middle_name": "Игоревна",
    "updated_at": "2017-08-10T09:54:52.718Z",
    "vacancy_id": null,
  },
  "data": Array [],
  "openLinkedCandidateModal": false,
  "sources": Array [],
}
`;

exports[`candidates reducer should match RELEASE_CURRENT_CANDIDATE snapshot 1`] = `
Object {
  "current": Object {},
  "data": Array [
    Object {
      "birthdate": null,
      "candidate_vacancies": Array [
        Object {
          "candidate_id": 1,
          "created_at": "2017-08-11T18:21:18.446Z",
          "current_vacancy_stage_id": 16,
          "id": 1,
          "updated_at": "2017-08-11T18:21:18.446Z",
          "vacancy_id": 43,
        },
        Object {
          "candidate_id": 1,
          "created_at": "2017-08-14T14:13:47.194Z",
          "current_vacancy_stage_id": 56,
          "id": 5,
          "updated_at": "2017-08-17T11:24:27.863Z",
          "vacancy_id": 48,
        },
      ],
      "created_at": "2017-08-10T08:45:27.030Z",
      "first_name": "Откорней",
      "id": 1,
      "last_name": "Докончиков",
      "middle_name": "Муфлонович",
      "updated_at": "2017-08-10T08:45:27.030Z",
      "vacancy_id": null,
    },
  ],
  "openLinkedCandidateModal": true,
  "sources": Array [],
}
`;

exports[`candidates reducer should match TOGGLE_LINKED_CANDIDATE_MODAL snapshot 1`] = `
Object {
  "current": Object {},
  "data": Array [],
  "openLinkedCandidateModal": true,
  "sources": Array [],
}
`;

exports[`candidates reducer should match UPDATE_CURRENT_CANDIDATE_RES snapshot 1`] = `
Object {
  "current": Object {
    "birthdate": "1994-11-17",
    "candidate_vacancies": Array [],
    "created_at": "2017-08-10T09:54:52.718Z",
    "first_name": "Виктория",
    "id": 3,
    "last_name": "Сабурова",
    "middle_name": "Игоревна",
    "updated_at": "2017-08-10T09:54:52.718Z",
    "vacancy_id": null,
  },
  "data": Array [],
  "openLinkedCandidateModal": false,
  "sources": Array [],
}
`;
